<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_frag"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/green" >

        <ImageButton
            android:id="@+id/ib_close"
            android:src="@mipmap/icon_close"
            android:layout_centerVertical="true"
            android:padding="8dp"
            android:layout_marginLeft="8dp"
            android:background="@color/tran"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/log_in"
            android:textColor="@color/white"
            android:textSize="@dimen/txt_title" />

        <TextView
            android:id="@+id/tv_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="8dp"
            android:text="@string/register"
            android:layout_marginRight="8dp"
            android:textColor="@color/white"
            android:textSize="@dimen/txt_caption" />
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        >
        <TextView
            android:text="@string/account"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            style="@style/TxtSubTitle" />
        <EditText
            android:hint="@string/Please_enter_your_registered_mobile_number"
            android:inputType="number"
            android:background="@null"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/et_phone" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/divider_gray"></LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        >
        <TextView
            android:text="@string/password"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            style="@style/TxtSubTitle" />
        <EditText
            android:hint="@string/Please_enter_your_password"
            android:inputType="textPassword"
            android:background="@null"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:id="@+id/et_pwd" />
        <ImageButton
            android:id="@+id/ib_show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/pwd_dismiss"
            android:padding="8dp"
            android:layout_marginRight="16dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/divider_gray"></LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp">
        <TextView
            android:id="@+id/tv_forget"
            android:text="@string/forget_password"
            android:textSize="14sp"
            android:padding="16dp"
            android:layout_alignParentRight="true"
            style="@style/TxtBody" />
    </RelativeLayout>


    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:background="@drawable/bg_btn_login"
        android:layout_margin="16dp"/>


</LinearLayout>
