<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_frag"
    android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/green" >

                <ImageButton
                    android:id="@+id/ib_back"
                    android:src="@mipmap/btn_back"
                    android:background="@color/tran"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="8dp"
                    android:padding="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/basic_information"
                    android:textColor="@color/white"
                    android:textSize="@dimen/txt_title" />

            </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                >
                <TextView
                    android:text="@string/avatar"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    style="@style/TxtSubTitle" />
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="8dp"
                    >
                    <de.hdodenhof.circleimageview.CircleImageView
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:layout_alignParentRight="true"
                        android:src="@mipmap/avatar_defoult"
                        android:layout_marginRight="8dp"
                        android:id="@+id/iv_avatar" />
                </RelativeLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/gray_light"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                >
                <TextView
                    android:text="@string/name"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    style="@style/TxtSubTitle" />
                <EditText
                    android:hint="@string/enter_name"
                    android:background="@null"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:id="@+id/et_name" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/gray_light"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                >
                <TextView
                    android:text="@string/gender"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    style="@style/TxtSubTitle" />
                <RadioGroup
                    android:id="@+id/rg_sex"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    >
                    <RadioButton
                        android:id="@+id/rb_male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/male"
                        android:checked="true" />
                    <ImageView
                        android:src="@mipmap/ic_man"
                        android:layout_marginLeft="16dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <RadioButton
                        android:id="@+id/rb_female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="32dp"
                        android:text="@string/female"/>
                    <ImageView
                        android:src="@mipmap/ic_woman"
                        android:layout_marginLeft="16dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </RadioGroup>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/gray_light"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                >
                <TextView
                    android:text="@string/birthday"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    style="@style/TxtSubTitle" />
                <EditText
                    android:hint="@string/choose_birthday"
                    android:editable="false"
                    android:background="@null"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:id="@+id/et_birthday" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/gray_light"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                >
                <TextView
                    android:text="@string/blood_group"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    style="@style/TxtSubTitle" />
                <EditText
                    android:hint="@string/choose_blood"
                    android:editable="false"
                    android:background="@null"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:id="@+id/et_blood_type" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/gray_light"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                >
                <TextView
                    android:text="@string/occupation"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    style="@style/TxtSubTitle" />
                <EditText
                    android:hint="@string/choose_occupation"
                    android:editable="false"
                    android:background="@null"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:id="@+id/et_occupation" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/gray_light"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                >
                <TextView
                    android:text="@string/region"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    style="@style/TxtSubTitle" />
                <EditText
                    android:id="@+id/et_area"
                    android:editable="false"
                    android:hint="@string/choose_region"
                    android:background="@null"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                     />
                <LinearLayout
                    android:id="@+id/ll_auto_location"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center"
                    >
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/icon_position"/>
                    <TextView
                        android:id="@+id/tv_positioning"
                        android:text="@string/loc"
                        android:textColor="@color/green"
                        android:layout_marginLeft="4dp"
                        android:layout_marginRight="16dp"
                        style="@style/TxtSubTitle" />
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/gray_light"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                >
                <TextView
                    android:text="@string/divices"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    style="@style/TxtSubTitle" />
                <EditText
                    android:hint="@string/placeholder"
                    android:background="@null"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:id="@+id/et_device_id" />
                <ImageView
                    android:id="@+id/iv_scan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:src="@mipmap/icon_sao"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/icon_add"/>
                <TextView
                    android:id="@+id/tv_add_device"
                    android:text="@string/add"
                    android:textColor="@color/green"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="16dp"
                    style="@style/TxtSubTitle" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/gray_light"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ListView
                    android:id="@+id/lv_device"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="72dp"
                    android:layout_marginRight="16dp"></ListView>
            </LinearLayout>


            <Button
                android:id="@+id/btn_commit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:background="@color/green"
                android:layout_margin="16dp"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
